--- a/Practica1.Rmd
+++ b/Practica1.Rmd
@@ -18,4 +18,10 @@ De las siguientes preguntas, clasifica cada una como descriptiva, exploratoria, 
     Descriptiva, ya que estamos buscando estadíticas del total de vehículos según sus características para hacer un ajuste del precio de los peajes.
 
 
+2. Dado un registro de visualizaciones de un servicio de video-on-demand, donde disponemos de los datos del usuario, de la película seleccionada, fecha de visualización y categoría de la película, queremos saber ¿Hay alguna preferencia en cuanto a género literario según los usuarios y su rango de edad?
+
+    Exploratoria, ya que se está relacionando el rango de edad del usuario con la preferencia del género cinematográfico.
+
+
+
 
