--- a/Practica1.Rmd
+++ b/Practica1.Rmd
@@ -6,7 +6,10 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = F)
+knitr::opts_chunk$set(warning = F)
+knitr::opts_chunk$set(error = F)
+knitr::opts_chunk$set(message = F)
 ```
 
 ## Ejercicio 1
@@ -14,28 +17,78 @@ knitr::opts_chunk$set(echo = TRUE)
 **De las siguientes preguntas, clasifica cada una como descriptiva, exploratoria, inferencia, predictiva o causal, y razona brevemente (una frase) el porqué:**
 
 **1. Dado un registro de vehículos que circulan por una autopista, disponemos de su marca y modelo, país de matriculación, y tipo de vehículo (por número de ruedas). Con tal de ajustar precios de los peajes, ¿Cuántos vehículos tenemos por tipo? ¿Cuál es el tipo más frecuente? ¿De qué países tenemos más vehículos?**
-    
-    Descriptiva, ya que estamos buscando estadíticas del total de vehículos según sus características para hacer un ajuste del precio de los peajes.
 
+```         
+Descriptiva, ya que estamos buscando estadíticas del total de vehículos según sus características para hacer un ajuste del precio de los peajes.
+```
 
 **2. Dado un registro de visualizaciones de un servicio de video-on-demand, donde disponemos de los datos del usuario, de la película seleccionada, fecha de visualización y categoría de la película, queremos saber ¿Hay alguna preferencia en cuanto a género literario según los usuarios y su rango de edad?**
 
-    Exploratoria, ya que se está relacionando el rango de edad del usuario con la preferencia del género cinematográfico.
-
+```         
+Exploratoria, ya que se está relacionando el rango de edad del usuario con la preferencia del género cinematográfico.
+```
 
 **3. Dado un registro de peticiones a un sitio web, vemos que las peticiones que provienen de una red de telefonía concreta acostumbran a ser incorrectas y provocarnos errores de servicio. ¿Podemos determinar si en el futuro, los próximos mensajes de esa red seguirán dando problemas? ¿Hemos notado el mismo efecto en otras redes de telefonía?**
 
-    Predictiva, ya que intentamos predecir un comportamiento futuro a partir de un registro de peticiones ya realizadas a un sitio web.
-
+```         
+Predictiva, ya que intentamos predecir un comportamiento futuro a partir de un registro de peticiones ya realizadas a un sitio web.
+```
 
 **4. Dado los registros de usuarios de un servicio de compras por internet, los usuarios pueden agruparse por preferencias de productos comprados. Queremos saber si ¿Es posible que, dado un usuario al azar y según su historial, pueda ser directamente asignado a un o diversos grupos?**
 
-    Predictiva, porque a partir de los datos que tenemos del historial del usuario, le estamos asignando a un o diversos grupos.
+```         
+Predictiva, porque a partir de los datos que tenemos del historial del usuario, le estamos asignando a un o diversos grupos.
+```
 
-    
+## Pregunta 2
+
+```{r carrega_llibreires}
+library(readr)
+```
 
 
 
+```{r carrega_dades}
+epa_http <- read_table("epa-http.csv", col_names = FALSE, show_col_types = F)
+colnames(epa_http) <- c("IP", "Timestamp", "Action", "File", "HTTP version", "Response Code", "Bytes")
+```
 
 
+```{r headjj}
+head(epa_http)
+```
+
+Pregunta 1
+
+Número filas:
+```{r numFilas}
+nrow(epa_http)
+```
+
+Número columnas:
+```{r numCol}
+ncol(epa_http)
+```
+
+Media columna Bytes:
+```{r mediaBytes}
+epa_http$Bytes <- as.integer(epa_http$Bytes)
+mean(epa_http$Bytes, na.rm = T)
+```
+
+Pregunta 2
+
+```{r sumaEdus}
+sum(grepl(".edu", epa_http$IP))
+
+```
+
+Pregunta 3
+
+```{r limpiarTipo}
+epa_http$Action <- sub('^"', '', epa_http$Action)
+```
+```{r headjj2}
+head(epa_http)
+```
 
